Fixed top navbar to align with the website new design (icon and dropdown arrows) (#174)

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -372,3 +372,8 @@ footer .container-fluid {
   }
 
 }
+
+/* Removes the default dropdown arrow */
+.dropdown > .navbar__link:after {
+  display: none;
+}
